--- a/shui-backend/package.json
+++ b/shui-backend/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "@aws-sdk/client-dynamodb": "^3.667.0",
     "@aws-sdk/lib-dynamodb": "^3.667.0",
-    "uuid": "^10.0.0",
-    "axios": "^1.7.7"
+    "axios": "^1.7.7",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/uuid": "^10.0.0",
-    "serverless": "^4.4.4",
-    "eslint": "^9.12.0"
+    "eslint": "^9.12.0",
+    "serverless": "^4.4.4"
   }
 }
